force-app/main/default/objects/BSF_Portfolio__c/BSF_Portfolio__c.object-meta.xml
<CustomObject>
    <label>BSF Portfolio</label>
    <nameField>
        <label>BSF Portfolio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BSFPortfolios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>