force-app/main/default/objects/BSF_Portfolio__c/fields/Portfolio_Type2__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Type2__c</fullName>
    <description>Picklist field to select the Portfolio Type. The old text type Portfolio Type field would be retired and replaced with this new picklist field.</description>
    <label>Portfolio Type (Not in use)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Temporary Account Manager</fullName>
            </value>
            <value>
                <fullName>Account Portfolio</fullName>
            </value>
            <value>
                <fullName>Area Booking Manager</fullName>
            </value>
            <value>
                <fullName>District Manager</fullName>
            </value>
            <value>
                <fullName>Sickle Cell Account Manager</fullName>
            </value>
            <value>
                <fullName>National Account Manager</fullName>
            </value>
            <value>
                <fullName>Power Booker</fullName>
            </value>
            <value>
                <fullName>Relationship Manager</fullName>
            </value>
            <value>
                <fullName>RDSE</fullName>
            </value>
            <value>
                <fullName>DSVP</fullName>
            </value>
            <value>
                <fullName>Fixed Site</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>DISTRICT</fullName>
            </value>
            <value>
                <fullName>Collection Operation</fullName>
            </value>
            <value>
                <fullName>Account Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>