force-app/main/default/objects/BSF_Portfolio__c/fields/Portfolio_Type__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Type__c</fullName>
    <label>Portfolio Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Portfolio_Type</valueSetName>
    </valueSet>
</CustomField>