force-app/main/default/objects/BSF_Portfolio__c/fields/Territory_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Territory_Portfolio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Territory Portfolio</label>
    <type>Checkbox</type>
</CustomField>