force-app/main/default/objects/BSF_Portfolio__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Portfolio_Type__c</columns>
    <columns>NAME</columns>
    <columns>Parent_Portfolio__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Account_Based_Portfolio__c</columns>
    <columns>Territory_Portfolio__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_Date__c</field>
        <operation>equals</operation>
        <value>12/31/4000</value>
    </filters>
    <label>All BSF Portfolios</label>
</ListView>